--- a/_sass/theme/_default_dark.scss
+++ b/_sass/theme/_default_dark.scss
@@ -9,9 +9,9 @@ $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 
 $navy                       : #071C2F;
-$dark-navy                  : mix(#000, $gray, 40%);
-$darker-navy                : mix(#000, $gray, 60%);
-$light-navy                 : mix(#fff, $gray, 50%);
+$dark-navy                  : mix(#000, $navy, 40%);
+$darker-navy                : mix(#000, $navy, 60%);
+$light-navy                 : mix(#fff, $navy, 50%);
 
 $background                 : #071C2F;
 $background-light           : mix(#fff, $background, 80%);
