Change navy color in default dark theme
Updated the navy color variable for the dark theme.

--- a/_sass/theme/_default_dark.scss
+++ b/_sass/theme/_default_dark.scss
@@ -8,7 +8,7 @@ $dark-gray                  : mix(#000, $gray, 40%);
 $darker-gray                : mix(#000, $gray, 60%);
 $light-gray                 : mix(#fff, $gray, 50%);
 
-$navy                       : #071C2F;
+$navy                       : #1a1a24;
 $dark-navy                  : mix(#000, $navy, 40%);
 $darker-navy                : mix(#000, $navy, 60%);
 $light-navy                 : mix(#fff, $navy, 50%);
