Change background color for dark theme

--- a/_sass/theme/_default_dark.scss
+++ b/_sass/theme/_default_dark.scss
@@ -13,7 +13,7 @@ $dark-navy                  : mix(#000, $navy, 40%);
 $darker-navy                : mix(#000, $navy, 60%);
 $light-navy                 : mix(#fff, $navy, 50%);
 
-$background                 : #071C2F;
+$background                 : #1a1a24;
 $background-light           : mix(#fff, $background, 80%);
 $background-lighter         : mix(#fff, $background, 90%);
 $text                       : #ffffff;
